clusters/k4/kubernetes/apps/security/authelia/app/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: authelia-to-lldap
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: authelia
      app.kubernetes.io/instance: authelia
  # Required for TCP SYN ACK
  # TODO why ??
  ingress:
    - fromEndpoints: &labels
        - matchLabels:
            app.kubernetes.io/name: lldap
            app.kubernetes.io/instance: lldap
  egress:
    - toEndpoints: *labels
      toPorts:
        - ports:
            # LDAP
            - port: "389"
              protocol: TCP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: authelia-lldap-side
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: lldap
      app.kubernetes.io/instance: lldap
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: authelia
            app.kubernetes.io/instance: authelia
      toPorts:
        - ports:
            # LDAP
            - port: "389"
              protocol: TCP
